--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS}")
 
 file(GLOB FTR_HEADERS include/*.h)
 file(GLOB FTR_SOURCE src/*.c)
-add_library(Frothleikr ${FTR_SOURCE} ${FTR_HEADERS})
+add_library(Frothleikr STATIC ${FTR_SOURCE} ${FTR_HEADERS})
 
 include_directories(include)
 
